--- a/content/posts/blog/2020-08-31-test-post.md
+++ b/content/posts/blog/2020-08-31-test-post.md
@@ -2,7 +2,7 @@
 layout: blog
 title: Test post
 date: 2020-08-31T00:28:47.400Z
-thumbnail: /images/uploads/death.jpg
+cover: /images/uploads/death.jpg
 rating: 5
 ---
 
