testing cms again

--- a/content/posts/art/2020-09-04-test-post.md
+++ b/content/posts/art/2020-09-04-test-post.md
@@ -1,7 +1,7 @@
 ---
 title: Test Post
 date: 2020-09-04T15:35:22.740Z
-draft: true
+draft: false
 categories: art
 cover: /images/uploads/art1.jpg
 author: Joshua Mathie
